--- a/navhim-ui/src/app/globals.css
+++ b/navhim-ui/src/app/globals.css
@@ -24,3 +24,42 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+@keyframes slide-up {
+  0% {
+    transform: translateY(100%);
+    opacity: 0;
+  }
+  20% {
+    transform: translateY(0%);
+    opacity: 1;
+  }
+  80% {
+    transform: translateY(0%);
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(-100%);
+    opacity: 0;
+  }
+}
+.animate-slide-up {
+  animation: slide-up 2.5s ease-in-out;
+}
+.Whyus{
+  position: relative;
+}
+.Whyus::after{
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 60px;
+  height: 10px;
+  background-color: red;
+}
+.BannerSection{
+  background-image: linear-gradient(rgb(221 227 235 / 40%), rgb(221 227 235 / 10%)), url('../asset/images/Picture1.png');
+  background-position: right;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
